fix(adapter): complete fabric game wiring